--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -8,4 +8,4 @@
 @import url("./base/_common.scss");
 @import url("./base/_reset.scss");
 @import url("./utilities/_mixin.scss");
-@import url("./utilities/_variables.scss");
+@import url("./utilities/_variables.scss");/*# sourceMappingURL=main.css.map */
