--- a/src/partials/hero.htm
+++ b/src/partials/hero.htm
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+<section>
+    <h1 class="ok">hello</h1>
+</section>
