rah change goods

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,11 +1,21 @@
+@import url("./base/__reset.scss");
+@import url("./utilities/_variables.scss");
+@import url("./utilities/_mixin.scss");
+@import url("./base/_common.scss");
 @import url("./sections/_hero.scss");
-@import url("./sections/_certify.scss");
-@import url("./sections/_footer.scss");
-@import url("./sections/_imagine.scss");
 @import url("./sections/_impression.scss");
 @import url("./sections/_trip.scss");
+@import url("./sections/_imagine.scss");
 @import url("./sections/_work.scss");
-@import url("./base/_common.scss");
-@import url("./base/_reset.scss");
-@import url("./utilities/_mixin.scss");
-@import url("./utilities/_variables.scss");
+@import url("./sections/_certify.scss");
+@import url("./sections/_footer.scss");
+
+
+
+
+
+
+
+
+
+
