--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,14 +1,14 @@
-@import url("./base/__reset.scss");
-@import url("./utilities/_variables.scss");
-@import url("./utilities/_mixin.scss");
-@import url("./base/_common.scss");
-@import url("./sections/_hero.scss");
-@import url("./sections/_impression.scss");
-@import url("./sections/_trip.scss");
-@import url("./sections/_imagine.scss");
-@import url("./sections/_work.scss");
-@import url("./sections/_certify.scss");
-@import url("./sections/_footer.scss");
+@import "./base/__reset.scss";
+@import "./utilities/__variables.scss";
+@import "./utilities/__mixin.scss";
+@import "./base/__common.scss";
+@import "./sections/__hero.scss";
+@import "./sections/__impression.scss";
+@import "./sections/__trip.scss";
+@import "./sections/__imagine.scss";
+@import "./sections/__work.scss";
+@import "./sections/__certify.scss";
+@import "./sections/__footer.scss";
 
 
 
