--- a/src/partials/imagine.html
+++ b/src/partials/imagine.html
@@ -1,11 +1,11 @@
 <section class="imagine">
-    <div class="imagine-flex">
-        <div class="imagine-text">
-            <h2 class="imagine-title">Лише уявіть</h2>
-            <p class="imagine-description">Ваша дитина отримує персоналізований подарунок, який має ексклюзивне оформлення та дизайн, бачить своє ім’я та повідомлення, яку було написано саме для неї. Але найцікавіше — попереду! На неї чекає незабутня освітня подорож, поїздка за кордон — веселі та корисні канікули. </p>
+    <div class="imagine__flex">
+        <div class="imagine__text">
+            <h2 class="imagine__title">Лише уявіть</h2>
+            <p class="imagine__description">Ваша дитина отримує персоналізований подарунок, який має ексклюзивне оформлення та дизайн, бачить своє ім’я та повідомлення, яку було написано саме для неї. Але найцікавіше — попереду! На неї чекає незабутня освітня подорож, поїздка за кордон — веселі та корисні канікули. </p>
         </div>
-        <div class="imagine-box">
-            <h2 class="imagine-euro">
+        <div class="imagine__box">
+            <h2 class="imagine__euro">
                 <svg xmlns="http://www.w3.org/2000/svg" width="205" height="45" viewBox="0 0 205 45" fill="none">
                 <path d="M0 21.0246H18.3623V31.4754H0V21.0246Z" fill="#221112"/>
                 <path d="M65.2871 33.2582C68.878 33.2582 71.9996 31.5779 74.6519 28.2172L83.7719 36.3934C81.65 39.1803 78.9569 41.3115 75.6924 42.7869C72.428 44.2623 68.7148 45 64.5526 45C59.1256 45 54.3922 43.668 50.3524 41.0041C46.3127 38.2992 43.4972 34.6926 41.9058 30.1844H35.1729V23.2992H40.6816V22.5V21.7008H35.1729V14.8156H41.9058C43.4972 10.3074 46.3127 6.72131 50.3524 4.05738C54.3922 1.35246 59.1256 0 64.5526 0C68.7148 0 72.428 0.737705 75.6924 2.21312C78.9569 3.68852 81.65 5.81967 83.7719 8.60656L74.6519 16.7828C71.9996 13.4221 68.878 11.7418 65.2871 11.7418C62.1859 11.7418 59.7172 12.7664 57.881 14.8156H68.3475V21.7008H55.2491V22.5V23.2992H68.3475V30.1844H57.881C59.7172 32.2336 62.1859 33.2582 65.2871 33.2582Z" fill="#221112"/>
@@ -14,8 +14,8 @@
                 <path d="M185.597 45C181.802 45 178.436 44.1189 175.498 42.3566C172.601 40.5533 170.316 37.9713 168.643 34.6107C167.01 31.209 166.194 27.1721 166.194 22.5C166.194 17.8279 167.01 13.8115 168.643 10.4508C170.316 7.04918 172.601 4.46721 175.498 2.70492C178.436 0.901639 181.802 0 185.597 0C189.392 0 192.738 0.901639 195.635 2.70492C198.573 4.46721 200.858 7.04918 202.49 10.4508C204.163 13.8115 205 17.8279 205 22.5C205 27.1721 204.163 31.209 202.49 34.6107C200.858 37.9713 198.573 40.5533 195.635 42.3566C192.738 44.1189 189.392 45 185.597 45ZM185.597 33.3811C188.862 33.3811 190.494 29.7541 190.494 22.5C190.494 15.2459 188.862 11.6189 185.597 11.6189C182.333 11.6189 180.701 15.2459 180.701 22.5C180.701 29.7541 182.333 33.3811 185.597 33.3811Z" fill="#221112"/>
                 </svg>
             </h2>
-            <p class="imagine-description-euro">Тільки до 25 грудня — обирайте поїздку зі знижкою €300!</p>
-            <button class="imagine-button">Зробити подарунок</button>
+            <p class="imagine__description-euro">Тільки до 25 грудня — обирайте поїздку зі знижкою €300!</p>
+            <button class="imagine__button">Зробити подарунок</button>
         </div>
     </div>
 </section>
