add-sass-classes

--- a/src/partials/trip.html
+++ b/src/partials/trip.html
@@ -1,10 +1,8 @@
-<section>
-<h2 class="trip-title">Кожна групова поїздка зі <span class="trip-title-color"> STUDY.UA</span> — це мікс з:</h2>
-
-
-<p class=""> <span>вивчення англійської мови</span> у найкрутіших мовних школах світу, </p>
-<p class=""><span>екскурсій</span> найдивовижнішими куточками світу</p>
-<p class=""><span>англійської 24/7 — </span> постійної мовної практики,</p>
-<p class=""><span>нових знайомств,</span> сотень вражень та веселих розваг!</p>
-<button class=""><span>Придбати сертифікат</span></button>
+<section class="trip">
+<h2 class="trip__title">Кожна групова поїздка зі <span class="trip__title-color"> STUDY.UA</span> — це мікс з:</h2>
+<p class="trip__part"> <span>вивчення англійської мови</span> у найкрутіших мовних школах світу, </p>
+<p class="trip__part"><span>екскурсій</span> найдивовижнішими куточками світу</p>
+<p class="trip__part"><span>англійської 24/7 — </span> постійної мовної практики,</p>
+<p class="trip__part"><span>нових знайомств,</span> сотень вражень та веселих розваг!</p>
+<button class="trip__button"><span>Придбати сертифікат</span></button>
 </section>
