--- a/src/partials/trip.html
+++ b/src/partials/trip.html
@@ -1,8 +1,10 @@
 <section class="trip">
 <h2 class="trip__title">Кожна групова поїздка зі <span class="trip__title-color"> STUDY.UA</span> — це мікс з:</h2>
-<p class="trip__part"> <span>вивчення англійської мови</span> у найкрутіших мовних школах світу, </p>
-<p class="trip__part"><span>екскурсій</span> найдивовижнішими куточками світу</p>
-<p class="trip__part"><span>англійської 24/7 — </span> постійної мовної практики,</p>
-<p class="trip__part"><span>нових знайомств,</span> сотень вражень та веселих розваг!</p>
-<button class="trip__button"><span>Придбати сертифікат</span></button>
+<ul class="trip__list">
+<p class="trip__part"> <span class="trip__bolt-text">вивчення англійської мови</span> у найкрутіших мовних школах світу, </p>
+<p class="trip__part"><span class="trip__bolt-text">екскурсій</span> найдивовижнішими куточками світу</p>
+<p class="trip__part"><span class="trip__bolt-text">англійської 24/7 — </span> постійної мовної практики,</p>
+<p class="trip__part"><span class="trip__bolt-text">нових знайомств,</span> сотень вражень та веселих розваг!</p>
+</ul>
+<button class="trip__button"><span class="trip__button-text">Придбати сертифікат</span></button>
 </section>
