--- a/src/sass/sections/__trip.scss
+++ b/src/sass/sections/__trip.scss
@@ -1,17 +1,65 @@
-&__title{
-    color: #221112;
+.trip{
+    padding-bottom: 150px;
+    &__title{
+        color: #221112;
+        font-family: "Montserrat Alternates";
+        font-size: 42px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;    
+    }
+
+    &__title-color{
+        color: #ED1C24;
 font-family: "Montserrat Alternates";
 font-size: 42px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
+    }
+
+    &__bolt-text{
+        color: #221112;
+font-family: Montserrat;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: 30px; /* 150% */
+    }
+
+&__part{
+    color: #221112;
+font-family: Montserrat;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
 }
 
-&__title-color{
-    color: #ED1C24;
-font-family: "Montserrat Alternates";
-font-size: 42px;
+&__button{
+    border-radius: 70px;
+background: #ED1C24;
+width: 370px;
+height: 80px;
+border: none;
+}
+
+
+
+&__button-text{
+    color: #FFF;
+text-align: center;
+font-family: Montserrat;
+font-size: 22px;
 font-style: normal;
-font-weight: 700;
-line-height: normal;
+font-weight: 900;
+line-height: 36px; /* 163.636% */
+}
+
+
+&__list{
+    display: flex;
+    gap: 14px;
+    margin-bottom: 84px;
+}
 }
