--- a/src/partials/impression.html
+++ b/src/partials/impression.html
@@ -1,1 +1,66 @@
-<section></section>
+<section>
+    <h1>Враження — найкращий подарунок!</h1>
+    <img src="" alt="">
+    <p>Тільки уявіть — ваша дитина знаходить під ялинкою яскравий бокс, відкриває
+        в очікуванні дива, та знаходить там подорож, що запам'ятається на все життя. 
+        Вам потрібно тільки обрати напрямок поїздки.</p>
+        <div>
+            <h2>Велика Британія</h2>
+            <img src="" alt="">
+            <li>Лондон</li>
+            <li>Оксфорд</li>
+            <li>Кембридж</li>
+            <li>Віндзор</li>
+            <li>Бат</li>
+            <li>Дувр</li>
+            <li>Манчестер</li>
+            <li>Йорк</li>
+            <li>Стірлінг</li>
+            <li>Уормінстер</li>
+        </div>
+        <div>
+            <h2>Ірландія</h2>
+            <img src="" alt="">
+            <ul>
+            <li>Дублін</li>
+            <li>Мейнут</li>
+        </ul>
+        </div>
+        <div>
+            <h2>США</h2>
+            <img src="" alt="">
+            <ul>
+            <li>Нью-Йорк</li>
+            <li>Лос-Анджелес</li>
+            <li>Маямі</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        </div>
+        <div>
+            <h2></h2>
+            <img src="" alt="">
+            <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        </div>
+        <ul>
+            <h2></h2>
+            <img src="" alt="">
+            <li></li>
+        </ul>
+        <ul>
+            <h2></h2>
+            <img src="" alt="">
+            <li></li>
+        </ul>
+
+</section>
