--- a/src/sass/sections/__imagine.scss
+++ b/src/sass/sections/__imagine.scss
@@ -1,3 +1,7 @@
 .imagine {
     background: #ED1C24;
+    padding-top: 140px;
+    padding-bottom: 139px;
+    background-image: url(../../images/imagine-images/desktop/dackground-desktop1x.webp);
+    background-repeat: no-repeat;
 }
