--- a/src/partials/impression.html
+++ b/src/partials/impression.html
@@ -1,66 +1,162 @@
-<section>
-    <h1>Враження — найкращий подарунок!</h1>
-    <img src="" alt="">
-    <p>Тільки уявіть — ваша дитина знаходить під ялинкою яскравий бокс, відкриває
-        в очікуванні дива, та знаходить там подорож, що запам'ятається на все життя. 
-        Вам потрібно тільки обрати напрямок поїздки.</p>
-        <div>
-            <h2>Велика Британія</h2>
-            <img src="" alt="">
-            <li>Лондон</li>
-            <li>Оксфорд</li>
-            <li>Кембридж</li>
-            <li>Віндзор</li>
-            <li>Бат</li>
-            <li>Дувр</li>
-            <li>Манчестер</li>
-            <li>Йорк</li>
-            <li>Стірлінг</li>
-            <li>Уормінстер</li>
-        </div>
-        <div>
-            <h2>Ірландія</h2>
-            <img src="" alt="">
-            <ul>
-            <li>Дублін</li>
-            <li>Мейнут</li>
-        </ul>
-        </div>
-        <div>
-            <h2>США</h2>
-            <img src="" alt="">
-            <ul>
-            <li>Нью-Йорк</li>
-            <li>Лос-Анджелес</li>
-            <li>Маямі</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        </div>
-        <div>
-            <h2></h2>
-            <img src="" alt="">
-            <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        </div>
-        <ul>
-            <h2></h2>
-            <img src="" alt="">
-            <li></li>
-        </ul>
-        <ul>
-            <h2></h2>
-            <img src="" alt="">
-            <li></li>
-        </ul>
-
+<section class="impression">
+  <h1 class="impression__title">Враження — найкращий подарунок!</h1>
+  <img
+    class="impression__box-image"
+    src="./images/impression-images/box.webp"
+    alt="box"
+  />
+  <div class="impression__travelholder">
+    <p class="impression__text">
+      Тільки уявіть — ваша дитина знаходить під ялинкою яскравий бокс, відкриває
+      в очікуванні дива, та знаходить там подорож, що запам'ятається на все
+      життя. Вам потрібно тільки обрати напрямок поїздки.
+    </p>
+    <div class="impression__travel-top">
+      <h2 class="impression__subtitle">Велика Британія</h2>
+      <img
+        class="impression__image"
+        src="./images/impression-images/Britian.webp"
+        alt="Britian"
+      />
+      <ul class="impression__travelsholser">
+        <li class="impression__subtext">
+          <p class="impression__travels">Лондон</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Оксфорд</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Кембридж</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Віндзор</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Бат</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Дувр</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Манчестер</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Йорк</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Стірлінг</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Уормінстер</p>
+        </li>
+      </ul>
+    </div>
+    <div class="impression__travel">
+      <h2 class="impression__subtitle">Ірландія</h2>
+      <img
+        class="impression__image"
+        src="./images/impression-images/Ireland.webp"
+        alt="Ireland"
+      />
+      <ul class="impression__travelsholser">
+        <li class="impression__subtext">
+          <p class="impression__travels">Дублін</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Мейнут</p>
+        </li>
+      </ul>
+    </div>
+    <div class="impression__travel">
+      <h2 class="impression__subtitle">США</h2>
+      <img
+        class="impression__image"
+        src="./images/impression-images/USA.webp"
+        alt="USA"
+      />
+      <ul class="impression__travelsholser">
+        <li class="impression__subtext">
+          <p class="impression__travels">Нью-Йорк</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Лос-Анджелес</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Маямі</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Вашингтон</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Сан-Дієго</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Сан-Франциско</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Чікаго</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Лас-Вегас</p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Гонолулу</p>
+        </li>
+      </ul>
+    </div>
+    <div class="impression__travel">
+      <h2 class="impression__subtitle">Країни Європи</h2>
+      <img
+        class="impression__image"
+        src="./images/impression-images/Europa.webp"
+        alt="Europa"
+      />
+      <ul class="impression__travelsholser">
+        <li class="impression__subtext">
+          <p class="impression__travels">Ніццаㅤ<span class="impression__span">(Франція)</span></p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Мюнхен <span class="impression__span"> (Німеччина)</span></p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Монтре та Енгельберг <span class="impression__span">(Швейцарія)</span></p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">Айя-Напа <span class="impression__span">(Кіпр)</span></p>
+        </li>
+        <li class="impression__subtext">
+          <p class="impression__travels">
+            Барселона та Лас-Пальмас-де-Гран-Канарія <span class="impression__span">(Іспанія)</span>
+          </p>
+        </li>
+      </ul>
+    </div>
+    <div class="impression__travel">
+      <h2 class="impression__subtitle">ОАЕ</h2>
+      <img
+        class="impression__image"
+        src="./images/impression-images/OAE.webp"
+        alt="OAE"
+      />
+      <ul class="impression__travelsholser">
+        <li class="impression__subtext">
+          <p class="impression__travels">Дубай</p>
+        </li>
+      </ul>
+    </div>
+    <div class="impression__travel-bottom">
+      <h2 class="impression__subtitle">Мексика</h2>
+      <img
+        class="impression__image"
+        src="./images/impression-images/Mexica.webp"
+        alt="Mexica"
+      />
+      <ul class="impression__travelsholser">
+        <li class="impression__subtext">
+          <p class="impression__travels">Канкун</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="impression__bottom"></div>
 </section>
