--- a/src/partials/trip.html
+++ b/src/partials/trip.html
@@ -1,4 +1,4 @@
-<section class="trip">
+<section class="trip container">
 <h2 class="trip__title">Кожна групова поїздка зі <span class="trip__title-color"> STUDY.UA</span> — це мікс з:</h2>
 <ul class="trip__list">
 <p class="trip__part"> <span class="trip__bolt-text">вивчення англійської мови</span> у найкрутіших мовних школах світу, </p>
