--- a/src/partials/certify.html
+++ b/src/partials/certify.html
@@ -1,1 +1,17 @@
-<section></section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <section class="certify">
+<h2 class="certify-tittle">Сертифікат на групову поїздку за кордон для вашої дитини </h2>
+<p class="certify-text">чудовий спосіб висловити турботу, обрати корисний подарунок, який залишить враження на все життя!
+</p>
+<img src="" alt="">
+
+    </section>
+</body>
+</html>
