--- a/src/sass/sections/__imagine.scss
+++ b/src/sass/sections/__imagine.scss
@@ -4,4 +4,10 @@
     padding-bottom: 139px;
     background-image: url(../images/imagine-images/desktop/dackground-desktop1x.webp);
     background-repeat: no-repeat;
+    width: 1920px;
+
+    &__tree1x {
+        width: 466px;
+height: 510px;
+    }
 }
