--- a/src/partials/imagine.html
+++ b/src/partials/imagine.html
@@ -1,4 +1,6 @@
 <section class="imagine">
+    <div class="containe">
+        <img src="../images/imagine-images/desktop/tree-desktop1x.webp" class="imagine__tree1x" alt="tree">
     <div class="imagine__flex">
         <div class="imagine__text">
             <h2 class="imagine__title">Лише уявіть</h2>
@@ -18,4 +20,5 @@
             <button class="imagine__button">Зробити подарунок</button>
         </div>
     </div>
+</div>
 </section>
