--- a/src/partials/certify.html
+++ b/src/partials/certify.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <section class="certify">
-<h2 class="certify-tittle">Сертифікат на групову поїздку за кордон для вашої дитини </h2>
+  <section class="certify">
+<h2 class="certify-tit
+tle">Сертифікат на групову поїздку за кордон для вашої дитини </h2>
 <p class="certify-text">чудовий спосіб висловити турботу, обрати корисний подарунок, який залишить враження на все життя!
 </p>
-<img src="" alt="">
-
+<img src="../../src/images/certify-images/сертіфікат 1mobile.webp" alt="">
+<div class="certify-forms">
+<label class="certify-label">
+      <input placeholder="E-mail" class="certify-form" type="text" />
+  </label>
+  <label class="certify-label">
+    <input placeholder="E-mail" class="certify-form" type="text" />
+</label>
+<label class="certify-label">
+    <input placeholder="E-mail" class="certify-form" type="text" />
+</label>
+</div>
     </section>
-</body>
-</html>
