--- a/src/sass/sections/__trip.scss
+++ b/src/sass/sections/__trip.scss
@@ -1,6 +1,12 @@
 .trip{
     padding-bottom: 150px;
     padding-top: 131px;
+
+@media screen and (min-width:480px) {
+    padding-top: 48px;
+}
+
+
     &__title{
         color: #221112;
         font-family: "Montserrat Alternates";
@@ -10,6 +16,27 @@
         line-height: normal;    
         width: 570px;
         margin-bottom: 78px;
+
+@media screen and (min-width:480px) { 
+    width: 300px;
+    color: #221112;
+    font-family: "Montserrat Alternates";
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 34px;
+}
+@media screen and (min-width:1200px) {
+    color: #221112;
+    font-family: "Montserrat Alternates";
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;    
+    width: 570px;
+    margin-bottom: 78px;
+}
     }
 
     &__title-color{
@@ -19,6 +46,23 @@ font-size: 42px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
+@media screen and (min-width:480px) {
+    color: #ED1C24;
+    font-family: "Montserrat Alternates";
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
+}
+@media screen and (min-width:1200px) {
+    color: #ED1C24;
+    font-family: "Montserrat Alternates";
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
     }
 
     &__bolt-text{
@@ -28,6 +72,22 @@ font-size: 20px;
 font-style: normal;
 font-weight: 700;
 line-height: 30px; /* 150% */
+@media screen and (min-width:480px) {
+    color: #221112;
+font-family: Montserrat;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: 24px; /* 150% */
+}
+@media screen and (min-width:1200px) {
+    color: #221112;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px; /* 150% */
+}
     }
 
 &__part{
@@ -38,6 +98,24 @@ font-size: 20px;
 font-style: normal;
 font-weight: 400;
 line-height: 30px;
+@media screen and (min-width:480px) {
+    width: 300px;
+    color: #221112;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+}
+@media screen and (min-width:1200px) {
+    width: 270px;
+    color: #221112;
+font-family: Montserrat;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+}
 }
 
 &__button{
@@ -46,6 +124,15 @@ background: #ED1C24;
 width: 370px;
 height: 80px;
 border: none;
+
+@media screen and (min-width:480px) {
+    width: 300px;
+height: 50px;
+}
+@media screen and (min-width:1200px) { 
+    width: 370px;
+    height: 80px;
+}
 }
 
 
@@ -58,6 +145,25 @@ font-size: 22px;
 font-style: normal;
 font-weight: 900;
 line-height: 36px; /* 163.636% */
+@media screen and (min-width:480px) {
+    color: #FFF;
+text-align: center;
+font-family: Montserrat;
+font-size: 16px;
+font-style: normal;
+font-weight: 900;
+line-height: 36px; /* 225% */
+}
+
+@media screen and (min-width:1200px) {
+    color: #FFF;
+text-align: center;
+font-family: Montserrat;
+font-size: 22px;
+font-style: normal;
+font-weight: 900;
+line-height: 36px; /* 163.636% */
+}
 }
 
 
@@ -65,5 +171,18 @@ line-height: 36px; /* 163.636% */
     display: flex;
     gap: 14px;
     margin-bottom: 84px;
+
+    @media screen and (min-width:480px) {
+        display: flex;
+        flex-direction: column;
+        gap: 28px;
+        margin-bottom: 56px;
+    }
+
+    @media screen and (min-width:1200px) {
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+    }
 }
 }
