--- a/src/partials/work.html
+++ b/src/partials/work.html
@@ -1,1 +1,48 @@
-<section></section>
+<section class="work">
+  <h2 class="work-title">Як це працює?</h2>
+  <p class="work-text">
+    Для ідеального подарунка вам знадобиться лише 4 простих кроки!
+  </p>
+  <div class="work-description">
+    <ul class="work-list">
+      <li class="work-item">
+        <div class="work-overlay">
+          <h2 class="work-heading">Крок 1</h2>
+          <p class="work-desc">Залишіть заявку на цій сторінці.</p>
+        </div>
+      </li>
+      <li class="work-item">
+        <div class="work-overlay">
+          <h2 class="work-heading">Крок 2</h2>
+          <p class="work-desc">
+            Дочекайтеся дзвінка нашого менеджера. Разом з ним ви обговорите
+            деталі оформлення сертифікату. Ви зможете замовити власний
+            ексклюзивний дизайн або обрати з запропонованих варіантів. Ви
+            матимете можливість написати своє побажання власноруч, або ми можемо
+            самі надрукувати його чи будь-яке інше з нашої топ-підбірки.
+          </p>
+        </div>
+      </li>
+      <li class="work-item">
+        <div class="work-overlay">
+          <h2 class="work-heading">Крок 3</h2>
+          <p class="work-desc">
+            Наші чарівники працюють над виконанням вашого персонального
+            замовлення.
+          </p>
+        </div>
+      </li>
+      <li class="work-item">
+        <div class="work-overlay">
+          <h2 class="work-heading">Крок 4</h2>
+          <p class="work-desc">
+            Готово! Ви отримуєте гарний святковий подарунок, який ми дбайливо
+            запаковуємо для вашої дитини. Вам залишається лише тихенько покласти
+            його під ялинку :)
+          </p>
+        </div>
+      </li>
+    </ul>
+    <button class="work-btn">Хочу сертифікат</button>
+  </div>
+</section>
