Taras-dai-meni-chocolate

--- a/src/partials/imagine.html
+++ b/src/partials/imagine.html
@@ -1,6 +1,6 @@
 <section class="imagine">
-    <div class="containe">
-        <img src="../images/imagine-images/desktop/tree-desktop1x.webp" class="imagine__tree1x" alt="tree">
+    <div class="container">
+       
     <div class="imagine__flex">
         <div class="imagine__text">
             <h2 class="imagine__title">Лише уявіть</h2>
