--- a/src/partials/certify.html
+++ b/src/partials/certify.html
@@ -1,29 +1,44 @@
 <section class="certify">
   <div class="container">
-    <h2 class="certify-tittle">
-      Сертифікат на групову поїздку за кордон для вашої дитини
-    </h2>
-    <p class="certify-text">
-      чудовий спосіб висловити турботу, обрати корисний подарунок, який залишить
-      враження на все життя!
-    </p>
-    <img src="../src/images/certify-images/сертіфікат 1mobile.webp" alt="" />
-      <ul class="certify-list">
-        <li class="certify-item">
-      <label class="certify-label">
-        <input placeholder="Ваше ім'я" class="certify-form" type="text" />
-      </label>
-    </li>
-    <li class="certify-item">
-      <label class="certify-label">
-        <input placeholder="Номер телефону" class="certify-form" type="text" />
-      </label>
-    </li>
-    <li class="certify-item">
-      <label class="certify-label">
-        <input placeholder="E-mail" class="certify-form" type="text" />
-      </label>
-    </li>
+    <div class="certify-box">
+      <div class="certify-boxx">
+      <h2 class="certify-tittle">
+        Сертифікат на групову поїздку за кордон для вашої дитини
+      </h2>
+      <p class="certify-text">
+        чудовий спосіб висловити турботу, обрати корисний подарунок, який
+        залишить враження на все життя!
+      </p>
+    </div>
+      <img
+        class="certify-img"
+        src="../images/certify-images/сертіфікат1mobile.webp"
+        alt=""
+      />
+    </div>
+    <ul class="certify-list">
+      <li class="certify-item">
+        <label class="certify-label">
+          <input placeholder="Ваше ім'я" class="certify-form" type="text" />
+        </label>
+      </li>
+      <li class="certify-item">
+        <label class="certify-label">
+          <input
+            placeholder="Номер телефону"
+            class="certify-form"
+            type="text"
+          />
+        </label>
+      </li>
+      <li class="certify-item">
+        <label class="certify-label">
+          <input placeholder="E-Mail" class="certify-form" type="text" />
+        </label>
+      </li>
+      <li class="certify-item">
+        <button class="certify-btn">Хочу сертифікат</button>
+      </li>
     </ul>
   </div>
 </section>
