--- a/src/partials/impression.html
+++ b/src/partials/impression.html
@@ -51,7 +51,7 @@
         </li>
       </ul>
     </div>
-    <div class="impression__travel">
+    <div class="impression__travel-ireland">
       <h2 class="impression__subtitle">Ірландія</h2>
       <img
         class="impression__image"
@@ -156,7 +156,10 @@
           <p class="impression__travels">Канкун</p>
         </li>
       </ul>
+      
     </div>
+    
   </div>
+  <button class="impression__button">Більше</button>
   <div class="impression__bottom"></div>
 </section>
