--- a/src/sass/sections/__impression.scss
+++ b/src/sass/sections/__impression.scss
@@ -43,6 +43,12 @@ height: 199px;
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+
+    @media screen and (min-width: 1200px){
+      width: 970px;
+      font-size: 22px;
+      line-height: 35px;
+    }
   }
 
   &__travelholder {
@@ -76,37 +82,71 @@ height: 199px;
   }
 
   &__subtitle {
-     width: 300px;
+    width: 300px;
     color: #221112;
+
     text-align: center;
-    font-family: $montserrat-alternas;
-    font-size: 42px;
+    font-family: "Montserrat Alternates";
+    font-size: 20px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+
+    @media screen and (min-width: 1200px){
+      width: 830px;
+      color: #221112;
+text-align: center;
+font-family: "Montserrat Alternates";
+font-size: 42px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+
+    }
   }
 
   &__image {
-
-      min-width: 300px;
-
+      max-width: 300px;
     border-radius: 24px;
-
-
     @media screen and (min-width: 1200px){
-      width: 770px;
-    height: 434px;
+      min-width: 770px;
+    min-height: 434px;
     border-radius: 24px;
     }
   }
 
   &__travel-top {
-    margin-top: 79px;
-    margin-bottom: 135px;
+    margin-top: 48px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @media screen and (min-width: 1200px){
+      display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 135px; 
+       margin-top: 79px;
+    }
+  }
+
+  &__travel-ireland{
+    margin-top: 48px;
+    margin-bottom: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    @media screen and (min-width: 1200px){
+      display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 135px;
+    }
   }
 
   &__travel {
@@ -121,24 +161,52 @@ height: 199px;
   }
 
   &__travel-bottom {
-    display: flex;
+    display: none;
+
+    @media screen and (min-width: 1200px){
+      display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 135px;
+    }
   }
 
   &__travelsholser {
-    width: 931px;
+    width: 278px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    
+
+    @media screen and (min-width: 1200px){
+      min-width: 931px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 15px;
+    }
   }
 
   &__subtext {
+    min-width: 40px;
+    max-width: 92px;
     display: flex;
+    height: 28px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 70px;
+    background: #eed7d8;
+    padding-left: 4px;
+    padding-right: 4px;
+
+    @media screen and (min-width:1200px){
+      display: flex;
     min-width: 96px;
+    max-width: 628px;
     height: 50px;
     justify-content: center;
     align-items: center;
@@ -146,10 +214,21 @@ height: 199px;
     background: #eed7d8;
     padding-left: 11px;
     padding-right: 11px;
+    }
   }
 
   &__travels{
     display: flex;
+    color: #221112;
+text-align: center;
+font-family: Montserrat;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 36px;
+
+@media screen and (min-width: 1200px){
+  display: flex;
     color: #221112;
 text-align: center;
 font-family: $montserrat;
@@ -157,10 +236,15 @@ font-size: 22px;
 font-style: normal;
 font-weight: 400;
 line-height: 36px;
+}
+
   }
 
   &__bottom{
-    height: 148px;
+    height: 0px;
+    @media screen and (min-width: 1200px){
+      height: 148px;
+    }
   }
 
   &__span{
@@ -171,5 +255,28 @@ font-size: 14px;
 font-style: normal;
 font-weight: 400;
 line-height: 36px;
+  }
+
+  &__button{
+    display: flex;
+width: 300px;
+height: 50px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+color: #FFF;
+text-align: center;
+font-family: Montserrat;
+font-size: 16px;
+font-style: normal;
+font-weight: 900;
+line-height: 36px;
+border-radius: 70px;
+background-color: #ED1C24;
+margin-bottom: 80px;
+
+    @media screen and (min-width: 1200px){
+      display: none;
+    }
   }
 }
