--- a/src/partials/certify.html
+++ b/src/partials/certify.html
@@ -10,11 +10,19 @@
         залишить враження на все життя!
       </p>
     </div>
+    <picture>
+      <source media="(max-width:1199px)"
+      srcset="./images/certify-images/сертіфікат2mobile1x.webp 1x, ./images/certify-images./сертіфікат1desktop2x.webp 2x">
+      <source
+      media="(min-width:1200px)"
+      srcset="./images/certify-images/сертіфікат1desktop1x.webp 1x, ./images/certify-images/сертіфікат1desktop2x.webp 2x"
+    />
       <img
         class="certify-img"
         src="../images/certify-images/сертіфікат1mobile.webp"
         alt=""
       />
+    </picture>
     </div>
     <ul class="certify-list">
       <li class="certify-item">
