--- a/src/partials/impression.html
+++ b/src/partials/impression.html
@@ -1,4 +1,5 @@
 <section class="impression">
+  <div class="container impression__container">
   <h1 class="impression__title">Враження — найкращий подарунок!</h1>
   <img
     class="impression__box-image"
@@ -11,7 +12,8 @@
       в очікуванні дива, та знаходить там подорож, що запам'ятається на все
       життя. Вам потрібно тільки обрати напрямок поїздки.
     </p>
-    <div class="impression__travel-top">
+    <ul>
+    <li class="impression__travel-top">
       <h2 class="impression__subtitle">Велика Британія</h2>
       <img
         class="impression__image"
@@ -50,8 +52,8 @@
           <p class="impression__travels">Уормінстер</p>
         </li>
       </ul>
-    </div>
-    <div class="impression__travel-ireland">
+    </li>
+    <li class="impression__travel-ireland">
       <h2 class="impression__subtitle">Ірландія</h2>
       <img
         class="impression__image"
@@ -66,8 +68,8 @@
           <p class="impression__travels">Мейнут</p>
         </li>
       </ul>
-    </div>
-    <div class="impression__travel">
+    </li>
+    <li class="impression__travel">
       <h2 class="impression__subtitle">США</h2>
       <img
         class="impression__image"
@@ -103,8 +105,8 @@
           <p class="impression__travels">Гонолулу</p>
         </li>
       </ul>
-    </div>
-    <div class="impression__travel">
+    </li>
+    <li class="impression__travel">
       <h2 class="impression__subtitle">Країни Європи</h2>
       <img
         class="impression__image"
@@ -130,8 +132,8 @@
           </p>
         </li>
       </ul>
-    </div>
-    <div class="impression__travel">
+    </li>
+    <li class="impression__travel">
       <h2 class="impression__subtitle">ОАЕ</h2>
       <img
         class="impression__image"
@@ -143,8 +145,8 @@
           <p class="impression__travels">Дубай</p>
         </li>
       </ul>
-    </div>
-    <div class="impression__travel-bottom">
+    </li>
+    <li class="impression__travel-bottom">
       <h2 class="impression__subtitle">Мексика</h2>
       <img
         class="impression__image"
@@ -157,9 +159,10 @@
         </li>
       </ul>
       
-    </div>
-    
+    </li>
+  </ul>
   </div>
   <button class="impression__button">Більше</button>
   <div class="impression__bottom"></div>
+</div>
 </section>
