--- a/src/sass/sections/__impression.scss
+++ b/src/sass/sections/__impression.scss
@@ -6,6 +6,13 @@
   flex-direction: column;
 background-color: $modded-background;
 
+&__container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
   &__title {
     width: 300px;
     color: #ED1C24;
@@ -32,6 +39,11 @@ line-height: normal;
   &__box-image {
 width: 119px;
 height: 199px;
+
+@media screen and (min-width: 1200px){
+  width: 303px;
+height: 513px;
+}
   }
 
   &__text {
@@ -168,7 +180,7 @@ line-height: normal;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 135px;
+    
     }
   }
 
