--- a/src/partials/trip.html
+++ b/src/partials/trip.html
@@ -1,4 +1,5 @@
-<section class="trip container">
+<section class="trip">
+    <div class="container">
 <h2 class="trip__title">Кожна групова поїздка зі <span class="trip__title-color"> STUDY.UA</span> — це мікс з:</h2>
 <ul class="trip__list">
 <p class="trip__part"> <span class="trip__bolt-text">вивчення англійської мови</span> у найкрутіших мовних школах світу, </p>
@@ -7,4 +8,5 @@
 <p class="trip__part"><span class="trip__bolt-text">нових знайомств,</span> сотень вражень та веселих розваг!</p>
 </ul>
 <button class="trip__button"><span class="trip__button-text">Придбати сертифікат</span></button>
+</div>
 </section>
