--- a/src/sass/sections/__trip.scss
+++ b/src/sass/sections/__trip.scss
@@ -19,28 +19,7 @@
         width: 570px;
         margin-bottom: 78px;
 
-
-@media screen and (min-width:1200px) {
-    color: #221112;
-    font-family: "Montserrat Alternates";
-    font-size: 42px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;    
-    width: 570px;
-    margin-bottom: 78px;
-}
-@media screen and (min-width:480px) { 
-    width: 300px;
-    color: #221112;
-    font-family: "Montserrat Alternates";
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin-bottom: 34px;
-}
-@media screen and (min-width:320px) {
+        @media screen and (min-width:320px) {
     max-width: 300px;
     color: #221112;
     font-family: "Montserrat Alternates";
@@ -50,6 +29,19 @@
     line-height: normal;
     margin-bottom: 34px;
 }
+
+@media screen and (min-width:1200px) {
+    color: #221112;
+    font-family: "Montserrat Alternates";
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;   
+   max-width: 100%;
+    margin-bottom: 78px;
+}
+
+
     }
 
     &__title-color{
@@ -60,23 +52,6 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 
-@media screen and (min-width:1200px) {
-    color: #ED1C24;
-    font-family: "Montserrat Alternates";
-    font-size: 42px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-@media screen and (min-width:480px) {
-    color: #ED1C24;
-    font-family: "Montserrat Alternates";
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-
-}
 @media screen and (min-width:320px) {
     color: #ED1C24;
     font-family: "Montserrat Alternates";
@@ -85,6 +60,17 @@ line-height: normal;
     font-weight: 700;
     line-height: normal;
 }
+
+@media screen and (min-width:1200px) {
+    color: #ED1C24;
+    font-family: "Montserrat Alternates";
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+
     }
 
     &__bolt-text{
@@ -95,22 +81,6 @@ font-style: normal;
 font-weight: 700;
 line-height: 30px; /* 150% */
 
-@media screen and (min-width:1200px) {
-    color: #221112;
-    font-family: Montserrat;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 30px; /* 150% */
-}
-@media screen and (min-width:480px) {
-    color: #221112;
-font-family: Montserrat;
-font-size: 16px;
-font-style: normal;
-font-weight: 700;
-line-height: 24px; /* 150% */
-}
 @media screen and (min-width:320px) {
     color: #221112;
     font-family: Montserrat;
@@ -119,6 +89,17 @@ line-height: 24px; /* 150% */
     font-weight: 700;
     line-height: 24px; /* 150% */
 }
+
+@media screen and (min-width:1200px) {
+    color: #221112;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px; /* 150% */
+}
+
+
     }
 
 &__part{
@@ -130,24 +111,6 @@ font-style: normal;
 font-weight: 400;
 line-height: 30px;
 
-@media screen and (min-width:1200px) {
-    width: 270px;
-    color: #221112;
-font-family: Montserrat;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 30px;
-}
-@media screen and (min-width:480px) {
-    width: 300px;
-    color: #221112;
-    font-family: Montserrat;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-}
 @media screen and (min-width:320px) {
     max-width: 300px;
     color: #221112;
@@ -157,6 +120,18 @@ line-height: 30px;
     font-weight: 400;
     line-height: 24px;
 }
+
+@media screen and (min-width:1200px) {
+    width: 270px;
+    color: #221112;
+font-family: Montserrat;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+}
+
+
 }
 
 &__button{
@@ -166,21 +141,19 @@ width: 370px;
 height: 80px;
 border: none;
 
+@media screen and (min-width:320px) {
+    max-width:300px;
+    height: 50px;
+ }
 
 @media screen and (min-width:1200px) { 
     width: 370px;
     height: 80px;
 }
 
-@media screen and (min-width:480px) {
-    max-width:300px;
- height: 50px;
- }
 
- @media screen and (min-width:320px) {
-    max-width:300px;
-    height: 50px;
- }
+
+
 }
 
 
@@ -194,25 +167,6 @@ font-style: normal;
 font-weight: 900;
 line-height: 36px; /* 163.636% */
 
-
-@media screen and (min-width:1200px) {
-    color: #FFF;
-text-align: center;
-font-family: Montserrat;
-font-size: 22px;
-font-style: normal;
-font-weight: 900;
-line-height: 36px; /* 163.636% */
-}
-@media screen and (min-width:480px) {
-    color: #FFF;
-text-align: center;
-font-family: Montserrat;
-font-size: 16px;
-font-style: normal;
-font-weight: 900;
-line-height: 36px; /* 225% */
-}
 @media screen and (min-width:320px) {
     color: #FFF;
     text-align: center;
@@ -222,6 +176,18 @@ line-height: 36px; /* 225% */
     font-weight: 900;
     line-height: 36px; /* 225% */
 }
+
+@media screen and (min-width:1200px) {
+    color: #FFF;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 36px; /* 163.636% */
+}
+
+
 }
 
 
@@ -230,20 +196,6 @@ line-height: 36px; /* 225% */
     gap: 14px;
     margin-bottom: 84px;
 
-
-
-    @media screen and (min-width:1200px) {
-        display: flex;
-        flex-direction: row;
-        gap: 30px;
-    }
-    @media screen and (min-width:480px) {
-        max-width: 300px;
-        display: flex;
-        flex-direction: column;
-        gap: 28px;
-        margin-bottom: 56px;
-    }
     @media screen and (min-width:320px) {
         max-width: 300px;
         display: flex;
@@ -252,5 +204,14 @@ line-height: 36px; /* 225% */
         margin-bottom: 56px;
 
     }
+
+    @media screen and (min-width:1200px) {
+        max-width: 100%;
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+    }
+   
+
 }
 }
